# aitinkerers-hackathon

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  PLAN_v2-details.md  PLAN_v2.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/exports/: baldurs_gate_3_study.json
data/exports/26335d0bc041550f9b31edeec283da49/: clarity.json  delight.json  executive.json  highlights.json  report.json  sentiment.json  summary.json  timeline.json  video.json
data/exports/416936c5a558563780ca8b8ca75cf4e3/: clarity.json  delight.json  executive.json  friction.json  highlights.json  quality.json  report.json  retry.json  sentiment.json  summary.json  timeline.json  verbal.json  video.json
data/exports/481360dd1b3a525ca757dd2a0b4d2a48/: clarity.json  delight.json  executive.json  friction.json  highlights.json  quality.json  report.json  retry.json  sentiment.json  summary.json  timeline.json  verbal.json  video.json
docs/: PLAN.md  PLAN_v2-details.md
inshights-frontend/: package-lock.json  package.json  vite.config.ts
inshights-frontend/public/: sample-report.json
inshights-frontend/src/: App.tsx  index.css
scripts/: analyze.py  export.py
src/gamesight/: __init__.py  config.py
src/gamesight/api/: __init__.py  (+2 more)
streams-finder/: .env.example  pyproject.toml
streams-finder/src/api/: app.py
streams-finder/src/api/routes/: research.py
streams-finder/src/research/: __init__.py  discoverer.py  models.py  query_generator.py  twitch_provider.py  video_verifier.py  youtube_provider.py
tests/: test_chunker.py  test_dedup.py  test_schemas.py
(+162 files in other folders)
