[project]
name = "streams-finder"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.68.0",
    "yt-dlp>=2026.3.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
]

[tool.ruff]
line-length = 160
target-version = "py314"
